# RustBook

./: README.md
01) Hello World/hello_cargo/src/: main.rs
02) Guessing Game/guessing_game/src/: main.rs
03) Common Concepts/3.3 functions/src/: main.rs
03) Common Concepts/3.5 loops/src/: main.rs
04) Ownership/4.1 boxes/src/: main.rs
04) Ownership/4.3 fix ownership errors/src/: main.rs
05) Structs/5.1 create structs/src/: main.rs
05) Structs/5.3 Methods/src/: main.rs
07) Packages, Crates, Modules/7.1 Packages and Crates/: notes
07) Packages, Crates, Modules/7.2 Modules/: cheat sheet
11) Tests/11.2 Run Tests/: Cargo.toml
11) Tests/11.3 Organize Tests/: Cargo.toml
12) Minigrep/src/: lib.rs
12) minigrep/src/: main.rs
14) Cargo & Crates/14.1 release profiles/: Cargo.toml
14) Cargo & Crates/14.1 release profiles/src/: main.rs
14) Cargo & Crates/14.2 publish crate/: Cargo.toml
14) Cargo & Crates/14.2 publish crate/src/: lib.rs  utils.rs
14) Cargo & Crates/14.3 Workspace/: Cargo.toml
14) Cargo & Crates/14.3 Workspace/add_one/: Cargo.toml
14) Cargo & Crates/14.3 Workspace/adder/: Cargo.toml
15) Smart Pointers/: 15.0 Smart Pointers
15) Smart Pointers/15.6 Memory Leaks/: Cargo.toml
16) Concurrency/16.4 Send & Sync Traits/: Send & Sync Traits.txt
17) Asynchronous Programming/17.0/: Async, Await, Futures, & Streams
17) Asynchronous Programming/17.0 Async Intro/: Syntax
17) Asynchronous Programming/17.1 Futures & Async/: Cargo.toml
17) Asynchronous Programming/17.4 Streams/: Cargo.toml
17) Asynchronous Programming/17.6 Futures, Tasks, & Threads/: Cargo.toml
19) Patterns and Matching/19.0 Patterns and Matching Intro/: Intro
20) Advanced Features/20.5 Macros/: Cargo.toml
21) Web Server/src/: lib.rs  main.rs
4) Ownership/4.2 refrences & borrowing/: Cargo.toml
4) Ownership/4.3 fix ownership errors/: Cargo.toml
5) Structs/5.1 create structs/: Cargo.toml
5) Structs/5.2 struct example/: Cargo.toml
6) Enums/6.1 create enums/: Cargo.toml
9) Error Handling/9.3 when to panic/: Cargo.toml
(+74 files in other folders)
